File: components/nexus-repository-view/src/main/java/org/sonatype/nexus/repository/httpclient/internal/BlockingHttpClient.java